--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,5 +20,10 @@ jobs:
         mkdir src dst
         echo '# Hello, World!' > src/index.md
         echo '<html><title></title>' > src/_header.html
-        bin/ssg5 src dst 'Test' 'http://www'
+        bin/ssg5 src docs 'Test' 'http://www'
+        git config --global user.name 'Your Name'
+        git config --global user.email 'your-username@users.noreply.github.com'
+        git add docs
+        git commit -am update
+        git push
         find dst
