--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,19 +6,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: fwilhe/ssg
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Run a multi-line script
       run: |
-        mkdir -p bin
-        curl -s https://rgz.ee/bin/ssg5 > bin/ssg5
-        curl -s https://rgz.ee/bin/Markdown.pl > bin/Markdown.pl
-        chmod +x bin/ssg5 bin/Markdown.pl
-        PATH="$PWD/bin:$PATH"
-        mkdir src dst
-        echo '# Hello, World!' > src/index.md
+        mkdir src
+        echo '# Hello, World2!' > src/index.md
         echo '<html><title></title>' > src/_header.html
         bin/ssg5 src docs 'Test' 'http://www'
         git config --global user.name 'Your Name'
